--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,4 +1,3 @@
-/* Fixed Header */
 .header {
   position: fixed;
   top: 0;
@@ -7,21 +6,18 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 50px;
-  background-color: #f5f7e9; /* Light background */
-  border-bottom: 1px solid #d4d9c3; /* Adds a separator */
-  z-index: 1000; /* Keep it above other elements */
-  height: 80px; /* Height of the header */
+  z-index: 1000;
+  height: 80px;
+  border-bottom: 1px solid black;
 }
 
-.logo img{
+.logo img {
   max-width: 200px;
 }
-/* Global content padding for all pages to ensure content is below the header */
 .page {
-  padding-top: 100px; /* Padding to push content below the fixed header */
+  padding-top: 100px;
 }
 
-/* Menu styling */
 nav ul {
   list-style: none;
   display: flex;
@@ -37,4 +33,9 @@ nav ul li a {
 
 nav ul li a:hover {
   color: #2e7d32;
+}
+nav ul li a.active-link {
+  color: green; /* Warna hijau */
+  font-weight: bold; /* Teks lebih tebal */
+  padding-bottom: 2px; /* Spasi agar garis tidak terlalu dekat dengan teks */
 }
